# OS

./: OS notes.docx  README.md
projects/o2-thompson.1/: README  main.c  test-sim_main.c  testing.data
projects/o2-thompson.1/o2-thompson.1/: CMakeLists.txt  Makefile  README.md  create.c  create.h  main.c  test-sim_main.c
projects/o2-thompson.1/o2-thompson.1.xcodeproj/: project.pbxproj
projects/o2-thompson.1/o2-thompson.1.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/o2-thompson.1/o2-thompson.1.xcodeproj/project.xcworkspace/xcuserdata/christhompson.xcuserdatad/: UserInterfaceState.xcuserstate
projects/o2-thompson.1/o2-thompson.1.xcodeproj/project.xcworkspace/xcuserdata/magnificentbastard.xcuserdatad/: UserInterfaceState.xcuserstate
projects/o2-thompson.1/o2-thompson.1/testsim/: test-sim_main.c
projects/o2-thompson.2/: CMakeLists.txt  Makefile  README  common.c  common.h  consumer.c  create.c  main.c  proc_fan  producer.c
projects/o2-thompson.2/o2-thompson.2.xcodeproj/: project.pbxproj
projects/o2-thompson.2/o2-thompson.2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/o2-thompson.2/o2-thompson.2.xcodeproj/project.xcworkspace/xcuserdata/christhompson.xcuserdatad/: UserInterfaceState.xcuserstate  WorkspaceSettings.xcsettings
projects/o2-thompson.2/o2-thompson.2.xcodeproj/xcuserdata/christhompson.xcuserdatad/xcschemes/: o2-thompson.2.xcscheme  xcschememanagement.plist
projects/o2-thompson.3/: CMakeLists.txt  Makefile  README  child.c  main.c  master.c  shared.c  shared.h
(+1 files in other folders)
